--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Debunkers</title>
+    <title>StudyBuddy</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -14,8 +14,8 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-    />
-
+      />
+<link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
@@ -23,8 +23,7 @@
     <nav class="navbar navbar-expand-md" aria-label="Main navigation">
       <div class="nav-container">
         <a href="#home" class="nav-logo">
-          <i class="bi bi-youtube" style="font-size:1.15rem;"></i>
-          Debunkers
+          Study Buddy
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,24 +53,28 @@
     <section class="hero" id="home">
       <div class="hero-content">
         <div class="hero-left">
-          <div class="hero-title">Debunkers</div>
+          <div class="hero-title">Study Buddy: Learning Effective Study Strategies with a ChatBot</div>
           <div class="hero-subtitle">
-            Analysis and implementation of strategies for debunking misinformation.
+            Insight into Study Buddy's development process and reflections on its impact.
           </div>
 
           <nav class="hero-ctas" aria-label="Jump to sections">
-            <a class="btn-ghost" href="#evidence"><i class="bi bi-search"></i> Following the Evidence</a>
-            <a class="btn-ghost" href="#debunking"><i class="bi bi-play-btn"></i> Debunking in the Wild</a>
-            <a class="btn-ghost" href="#becoming"><i class="bi bi-person-badge"></i> Becoming a Debunker</a>
+            <a class="btn-ghost" href="#overview"><i class="bi bi-card-heading"></i> Project Overview & Motivations</a>
+            <a class="btn-ghost" href="#ethics"><i class="bi bi-exclamation-circle"></i> Ethics and Impact</a>
+            <a class="btn-ghost" href="#building"><i class="bi bi-tools"></i> Building the Gem</a>
+             <a class="btn-ghost" href="#testing"><i class="bi bi-search"></i> Testing and Refinement</a>
+            <a class="btn-ghost" href="#results"><i class="bi bi-clipboard-data"></i> Results</a>
+            <a class="btn-ghost" href="#discussion"><i class="bi bi-chat-left-text"></i> Discussion</a>
+          </nav>
           </nav>
         </div>
       </div>
     </section>
 
-    <!-- SECTION 1: Following the Evidence -->
-     <section id="evidence" class="section">
+    <!-- SECTION 1: Project Overview & Motivations -->
+     <section id="overview" class="section">
       <div class="card-body clearfix">
-     <h2>Following the Evidence</h2>
+     <h2>Project Overview & Motivations</h2>
 
         <!-- hidden anchors: stable targets for reference back-links in References -->
         <span id="cite-debunk2020" class="citation-anchor" aria-hidden="true"></span>
@@ -111,9 +114,9 @@ One should not avoid correcting misinformation in fear that doing so will reinfo
      </section>
 
     <!-- SECTION 2: Debunking in the Wild -->
-    <section id="debunking" class="section">
+    <section id="ethics" class="section">
       <div class="card-body clearfix">
-        <h2>Debunking in the Wild</h2>
+        <h2>StudyBuddy: Ethics and Impact</h2>
 
         <!-- hidden anchor for the Insider citation back-link -->
         <span id="cite-insider2021" class="citation-anchor" aria-hidden="true"></span>
@@ -205,10 +208,10 @@ One should not avoid correcting misinformation in fear that doing so will reinfo
       </div>
     </section>
 
-    <!-- SECTION 3: Becoming a Debunker -->
-    <section id="becoming" class="section">
+    <!-- SECTION 3: Building the Gem -->
+    <section id="building" class="section">
       <div class="card-body clearfix">
-        <h2>Becoming a Debunker</h2>
+        <h2>Building the Gem </h2>
 
         <!-- hidden anchors for creativity references (back-links) -->
         <span id="cite-dimock1986" class="citation-anchor" aria-hidden="true"></span>
@@ -234,6 +237,28 @@ One should not avoid correcting misinformation in fear that doing so will reinfo
           <br />        </p>
       </div>
     </section>
+
+<!-- SECTION 4: Testing and Refinement -->
+    <section id="testing" class="section">
+      <div class="card-body clearfix">
+        <h2>Testing and Refinement </h2>
+    </div>
+    </section>
+
+<!-- SECTION 5: Results -->
+    <section id="results" class="section">
+      <div class="card-body clearfix">
+        <h2>Results</h2>
+    </div>
+    </section>
+
+<!-- SECTION 6: Discussion-->
+    <section id="discussion" class="section">
+      <div class="card-body clearfix">
+        <h2>Discussion</h2>
+    </div>
+    </section>
+
 
    <section id="citations" class="section">
       <div class="card-body clearfix">
