hero section updates

--- a/index.html
+++ b/index.html
@@ -33,17 +33,12 @@
         <div class="collapse navbar-collapse" id="mainNav">
           <ul class="nav-menu navbar-nav ms-auto">
             <li class="nav-item">
-              <a href="../index.html" class="nav-link"><i class="bi bi-house-door-fill me-2" aria-hidden="true"></i>Portfolio</a>
+              <a href="https://cs.wellesley.edu/~rf106/cs299-portfolio/" class="nav-link"><i class="bi bi-house-door-fill me-2" aria-hidden="true"></i>Rebecca's Portfolio</a>
             </li>
             <li class="nav-item">
-              <a href="#evidence" class="nav-link"><i class="bi bi-search me-2" aria-hidden="true"></i>Following the Evidence</a>
+              <a href="https://cs.wellesley.edu/~fa103/cs299-portfolio/" class="nav-link"><i class="bi bi-house-door-fill me-2" aria-hidden="true"></i>Farangiz's Portfolio</a>
             </li>
-            <li class="nav-item">
-              <a href="#debunking" class="nav-link"><i class="bi bi-play-btn me-2" aria-hidden="true"></i>Debunking in the Wild</a>
-            </li>
-            <li class="nav-item">
-              <a href="#becoming" class="nav-link"><i class="bi bi-person-badge me-2" aria-hidden="true"></i>Becoming a Debunker</a>
-            </li>
+        
           </ul>
         </div>
       </div>
@@ -51,22 +46,26 @@
 
     <!-- HERO -->
     <section class="hero" id="home">
-      <div class="hero-content">
-        <div class="hero-left">
-          <div class="hero-title">Study Buddy: Learning Effective Study Strategies with a ChatBot</div>
-          <div class="hero-subtitle">
+                <h1 class="hero-title">Study Buddy: Learning Effective Study Strategies with a ChatBot</h1>
+<div class="hero-subtitle">
             Insight into Study Buddy's development process and reflections on its impact.
           </div>
-
+      <div class="hero-content">
+        <div class="hero-left">
+          
           <nav class="hero-ctas" aria-label="Jump to sections">
             <a class="btn-ghost" href="#overview"><i class="bi bi-card-heading"></i> Project Overview & Motivations</a>
-            <a class="btn-ghost" href="#ethics"><i class="bi bi-exclamation-circ"></i> Ethics and Impact</a>
+            <a class="btn-ghost" href="#ethics"><i class="bi bi-exclamation-circle"></i> Ethics and Impact</a>
             <a class="btn-ghost" href="#building"><i class="bi bi-tools"></i> Building the Gem</a>
-             <a class="btn-ghost" href="#testing"><i class="bi bi-search"></i> Testing and Refinement</a>
+            <a class="btn-ghost" href="#testing"><i class="bi bi-search"></i> Testing and Refinement</a>
             <a class="btn-ghost" href="#results"><i class="bi bi-clipboard-data"></i> Results</a>
             <a class="btn-ghost" href="#discussion"><i class="bi bi-chat-left-text"></i> Discussion</a>
           </nav>
-          </nav>
+        </div>
+
+        <div class="hero-visual" aria-hidden="true">
+          <!-- Place studyBuddyIcon.jpg in the project root or update the path if you keep it in /images -->
+          <img src="studyBuddyIcon.jpg" alt="Study Buddy Icon">
         </div>
       </div>
     </section>
