--- a/index.html
+++ b/index.html
@@ -96,8 +96,64 @@
         <span id="cite-swire2020" class="citation-anchor" aria-hidden="true"></span>
         <span id="cite-haglin2017" class="citation-anchor" aria-hidden="true"></span>
 
-        <div class="container">
-          <h3>Three Components of Effective Study Strategy</h3>
+        <p>
+       We built and tested Study Buddy, a custom chatbot designed for Wellesley first year students who may not yet have a toolkit of effective strategies for studying higher-level course material in a college environment.
+        </p>
+
+        <p>
+       We performed a small user study (n=10) to see to what extent a custom chatbot could serve as an effective tool for helping Wellesley first years gain awareness of which popular study strategies are actually effective, and which aren’t, while also connecting first years with further resources that can help them right here at Wellesley.
+      </p>
+        <p>
+Two research questions guided our work:
+        <p>
+<div class="citation-block">
+        <p> RQ1: Can a chatbot that teaches evidence-based study strategies actually help Wellesley first-year students? </p>
+       <br>
+        <p> RQ2: What design choices make that kind of chatbot genuinely helpful? </p>
+        </div>
+<p>
+While creating the Gem, we intentionally kept the chatbot’s scope very narrow. Instead of trying to act like a general academic advisor, we stuck to study habits and common study myths, a decision stemming from wanting the bot to be reliable and not overstep. By limiting its knowledge base to peer-reviewed research from psychology, cognitive science, and learning science journals we selected ourselves, we did our best to mitigate risks of hallucinations, especially regarding information and sources. 
+</p>
+
+<p>
+As we entered the testing stage, we did so with a few expectations and even a few worries. First, because our sample was limited to Wellesley first year students, we anticipated that we were going to have trouble recruiting ten participants, as our participant pool was already minimized and neither of us have many personal relationships with first years such that we could ask them to complete this study as a favor to a friend. To account for this, we asked the Dean of First Year Students to spread the word about our study and called in a few favors to finally reach ten participants.
+</p>
+
+<p>
+In terms of the chatbot itself, we were unsure whether our strict citations rules would perform well and presumed that the bot would potentially cite outside of the sources. We also worried that using our bot would feel too stiff or too formal, even after trying to make it engaging and friendly. In addition, although this will be discussed more in detail in the Building the Gem section, we had no idea whether anyone would actually enjoy the optional myth-debunking game, or if it would feel like an extra step that users would find inadequate. And of course, we were hoping to see at least a small shift in students’ beliefs about what actually works when studying. 
+</p>
+
+<p>
+Overall, this project is especially relevant to Wellesley because the transition into rigorous college-level work can be challenging and a lot of first-years may struggle with figuring out how to learn productively. From our perspective, if a simple tool like a chatbot can help students build better habits and potentially reduce unnecessary stress, even in small ways, it’s worth exploring. 
+</p>
+
+
+      </div>
+    </section>
+
+    <!-- SECTION 2: Ethics and Impact -->
+    <section id="ethics" class="section">
+      <div class="card-body clearfix">
+        <h2>StudyBuddy: Ethics and Impact</h2>
+        <p>Content about ethics and impact goes here...</p>
+      </div>
+    </section>
+
+    <!-- SECTION 3: Building the Gem -->
+    <section id="building" class="section">
+      <div class="card-body clearfix">
+        <h2>Building the Gem</h2>
+
+        <span id="cite-dimock1986" class="citation-anchor" aria-hidden="true"></span>
+        <span id="cite-sagiv2010" class="citation-anchor" aria-hidden="true"></span>
+        <span id="cite-moreau2005" class="citation-anchor" aria-hidden="true"></span>
+        <span id="cite-kern2006" class="citation-anchor" aria-hidden="true"></span>
+        <span id="cite-stokes2006" class="citation-anchor" aria-hidden="true"></span>
+        
+        <p>Content about building the gem goes here...</p>
+
+                <div class="container">
+          <h4>Three Components of Effective Study Strategy</h4>
 
           <div class="grid">
             <!-- Card 1 -->
@@ -146,29 +202,7 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
 
-    <!-- SECTION 2: Ethics and Impact -->
-    <section id="ethics" class="section">
-      <div class="card-body clearfix">
-        <h2>StudyBuddy: Ethics and Impact</h2>
-        <p>Content about ethics and impact goes here...</p>
-      </div>
-    </section>
-
-    <!-- SECTION 3: Building the Gem -->
-    <section id="building" class="section">
-      <div class="card-body clearfix">
-        <h2>Building the Gem</h2>
-
-        <span id="cite-dimock1986" class="citation-anchor" aria-hidden="true"></span>
-        <span id="cite-sagiv2010" class="citation-anchor" aria-hidden="true"></span>
-        <span id="cite-moreau2005" class="citation-anchor" aria-hidden="true"></span>
-        <span id="cite-kern2006" class="citation-anchor" aria-hidden="true"></span>
-        <span id="cite-stokes2006" class="citation-anchor" aria-hidden="true"></span>
-        
-        <p>Content about building the gem goes here...</p>
       </div>
     </section>
 
