--- a/index.html
+++ b/index.html
@@ -149,9 +149,22 @@ Overall, this project is especially relevant to Wellesley because the transition
         <span id="cite-moreau2005" class="citation-anchor" aria-hidden="true"></span>
         <span id="cite-kern2006" class="citation-anchor" aria-hidden="true"></span>
         <span id="cite-stokes2006" class="citation-anchor" aria-hidden="true"></span>
-        
-        <p>Content about building the gem goes here...</p>
 
+       <h3>Guiding Principles</h3>
+       <h3>The Knowledge Base</h3>
+
+              <!-- journal-style list -->
+       <div class="journal-grid" aria-hidden="false">
+         <article class="journal-card"> <div class="journal-name" ><a href="https://www.apa.org/pubs/journals/edu">Journal of Educational Psychology</a></div> </article>
+         <article class="journal-card"> <div class="journal-name"><a href="https://link.springer.com/journal/10648">Educational Psychology Review</a></div> </article>
+         <article class="journal-card"> <div class="journal-name"><a href="https://www.apa.org/pubs/journals/xlm">Journal of Experimental Psychology: Learning, Memory, and Cognition</a></div> </article>
+         <article class="journal-card"> <div class="journal-name"><a href="https://link.springer.com/journal/11409">Metacognition and Learning</a></div> </article>
+         <article class="journal-card"> <div class="journal-name"><a href="https://www.sciencedirect.com/journal/learning-and-individual-differences">Learning and Individual Differences</a></div> </article>
+         <article class="journal-card"> <div class="journal-name"><a href="https://www.tandfonline.com/journals/hlns20">Journal of the Learning Sciences (JLS)</a></div> </article>
+         <article class="journal-card"> <div class="journal-name"><a href="https://www.aera.net/Publications/Journals/American-Educational-Research-Journal">American Educational Research Journal</a></div> </article>
+       </div>
+       
+       <h3>The Iterative Process</h3>
                 <div class="container">
           <h4>Three Components of Effective Study Strategy</h4>
 
