--- a/index.html
+++ b/index.html
@@ -248,6 +248,18 @@ In terms of the bot itself, based on their feedback and looking at their screens
 </li>
 </ol>
 </div>
+
+<div class="row my-4">
+  <div class="col-md-6 text-center">
+    <img src="sources.png" class="img-fluid rounded shadow-sm" style="max-width: 90%;"/>
+    <p class="mt-2 text-muted">Bot citing internet sources</p>
+  </div>
+
+  <div class="col-md-6 text-center">
+    <img src="game.png" class="img-fluid rounded shadow-sm"  style="max-width: 90%;"/>
+    <p class="mt-2 text-muted">True/False Myth Game</p>
+  </div>
+</div>
 <p>
   As talked about in the previous section Building the Gem, when we were building the knowledge base, we initially tried uploading 10 PDFs of some of our sources, but our topic was too broad for a limited amount of sources to cover all the myths we were testing. On top of that, the bot very frequently failed to cite properly when working from the PDF. After several rounds of troubleshooting and experimenting with different formats, we created a rule that the bot could only cite from specific cognitive and learning science journals. Once we tested that set up and saw that the bot consistently produced accurate and verifiable citations, we decided to stick with it. In addition, we told the bot that it had to admit when it couldn’t verify something in those journals and that pushed it to stop guessing. We also reworked both the myth-generation and the citation style several times. 
 In terms of the actual testing materials being sent out, we received feedback regarding adding questions to our surveys to measure change in belief and changing the measurements from 1-7 to 1-10, which we implemented.  
