--- a/index.html
+++ b/index.html
@@ -80,16 +80,6 @@
       </div>
     </section>
 
-    <!-- Sticky CTA Navigation -->
-     <!-- <nav class="hero-ctas" aria-label="Jump to sections">
-      <a class="btn-ghost" href="#overview"><i class="bi bi-card-heading"></i> Project Overview & Motivations</a>
-      <a class="btn-ghost" href="#ethics"><i class="bi bi-exclamation-circle"></i> Ethics and Impact</a>
-      <a class="btn-ghost" href="#building"><i class="bi bi-tools"></i> Building the Gem</a>
-      <a class="btn-ghost" href="#testing"><i class="bi bi-search"></i> Testing and Refinement</a>
-      <a class="btn-ghost" href="#results"><i class="bi bi-clipboard-data"></i> Results</a>
-      <a class="btn-ghost" href="#discussion"><i class="bi bi-chat-left-text"></i> Discussion</a>
-    </nav> -->
-
     <!-- SECTION 1: Project Overview & Motivations -->
     <section id="overview" class="section">
       <div class="card-body clearfix">
@@ -138,8 +128,41 @@ Overall, this project is especially relevant to Wellesley because the transition
     <!-- SECTION 2: Ethics and Impact -->
     <section id="ethics" class="section">
       <div class="card-body clearfix">
+
+        <span id="dataFeminismCitation" class="citation-anchor" aria-hidden="true"></span>
+
         <h2>StudyBuddy: Ethics and Impact</h2>
-        <p>Content about ethics and impact goes here...</p>
+
+<p>
+There are many ethical issues related to AI use in general, such as the vast amount of energy and resources it consumes, the potential for algorithmic bias, and the potential for false information and hallucinations. Our participants were not hesitant to express their concerns about generative AI usage. There were mainly concerns about AI being unethical in general, and when specifics were mentioned, it was in reference to resource consumption and environmental impacts. When participants were asked What would make you trust an AI tool to give reliable study advice?,  one responded 
+</p>
+
+<div class="blueQuote">
+“I hate using AI because of how unethical it is.”
+</div>
+<p>
+This participant was not alone in their beliefs on the matter. Due to the nature of this course, our research questions looked at how we can use a chatbot to help Wellesley first years gain awareness and belief in effective study strategies. If our research question was more along the lines of <em> what is the best modality to help Wellesley first years gain awareness and belief in effective study strategies</em>, we hypothesize that an AI chatbot is likely not the <em> best</em> tool, as the community is opposed. 
+</p>
+
+<p>
+Other problems arise from the use of genAI within this particular scope. Notably, interacting with an AI chatbot lessens the potential impact Wellesley’s community can have. If Study Buddy exists as a resource that students can interact with on their own,  students may not be as inclined to go to their academic success coach’s (ASC) motivation stations, PLTC workshops, or otherwise access support from those whose job it is to support them academically. Interacting with Study Buddy has the potential to cause an overreliance on AI tools, and could potentially lead students from veering away from professor and TA office hours and towards AI tools that not only isolate them from their community, but again partake in all of the aforementioned ethical quandaries.
+</p>
+<p>
+Throughout the process, we have been especially cognizant of our positionality in regards to the Wellesley first year community. Though as Wellesley students ourselves we have a lot in common with the first year students at this institution, we, as upperclassmen, are ultimately <strong><em> not </strong></em> a part of their internal community. To grapple with this, we have been keeping in mind the principles of data feminism, most notably, embracing pluralism, and how we as researchers should not be inputting our own biases into our artifact, but can use the research process as a method of participatory design to uplift multiple perspectives of Wellesley first years, rather than prescribing our own beliefs.
+</p>
+
+<p>
+Though GenAI is accepted with open arms by Wellesley first years, our Study Buddy chatbot does have potential for positive impacts on this community. In our user study, we were able to see patterns of increased belief in effective study strategies and decreased belief in ineffective ones. One participant even said,
+</p>
+
+<div class="blueQuote">
+“Thank you for this! It was very interesting and I have learned new strategies to practice and to avoid.”
+</div>
+
+<p>
+Moving forward, we’re left grappling with the question of, is Study Buddy’s potential for positive impacts worth the tradeoff with its negative impacts? And, as researchers removed from the community we are designing for, is it up to us to decide?
+</p>
+
       </div>
     </section>
 
@@ -458,61 +481,16 @@ Finally, although our strict constraints succeeded in keeping the bot accurate a
       <div class="card-body clearfix">
         <h2>References</h2>
         <ol class="references" style="margin-top: .75rem; padding-left: 1.15rem;">
-          <li id="ref-debunk2020" class="citation">
-            <span class="reference-number">1.</span>
-            Lewandowsky, S., Cook, J., Ecker, U. K. H., et al. (2020). <em>The Debunking Handbook 2020</em>. Available: <a href="https://sks.to/db2020" target="_blank" rel="noopener noreferrer">https://sks.to/db2020</a>. DOI: <a href="https://doi.org/10.17910/b7.1182" target="_blank" rel="noopener noreferrer">10.17910/b7.1182</a>.
-            <a class="back-link" href="#evidence" aria-label="Back to section Following the Evidence">↩</a>
-          </li>
-          <li id="ref-wood2019" class="citation">
-            <span class="reference-number">2.</span>
-            Wood, T., & Porter, E. (2019). The elusive backfire effect: Mass attitudes' steadfast factual adherence. <em>Political Behavior</em>, 41(1), 135–163.
-            <a class="back-link" href="#evidence" aria-label="Back to section Following the Evidence">↩</a>
-          </li>
-          <li id="ref-nyhan2015" class="citation">
-            <span class="reference-number">3.</span>
-            Nyhan, B., & Reifler, J. (2015). Does correcting myths about the flu vaccine work? An experimental evaluation of the effects of corrective information. <em>Vaccine</em>, 33(3), 459–464.
-            <a class="back-link" href="#evidence" aria-label="Back to section Following the Evidence">↩</a>
-          </li>
-          <li id="ref-insider2021" class="citation">
-            <span class="reference-number">4.</span>
-            Insider Science. (2021, August 11). <em>Podiatrists Debunk 11 Feet Myths</em> [Video]. YouTube. <a href="https://www.youtube.com/watch?v=8O71bQWg8ys" target="_blank" rel="noopener noreferrer">https://www.youtube.com/watch?v=8O71bQWg8ys</a>.
-            <a class="back-link" href="#debunking" aria-label="Back to section Debunking in the Wild">↩</a>
-          </li>
-          <li id="ref-swire2020" class="citation">
-            <span class="reference-number">5.</span>
-            Swire‑Thompson, B., DeGutis, J., & Lazer, D. (2020). Searching for the backfire effect: Measurement and design considerations. <em>Journal of Applied Research in Memory and Cognition</em>. DOI: <a href="https://doi.org/10.1016/j.jarmac.2020.06.005" target="_blank" rel="noopener noreferrer">10.1016/j.jarmac.2020.06.005</a>.
-            <a class="back-link" href="#overview" aria-label="Back to section Project Overview & Motivations">↩</a>
-          </li>
-          <li id="ref-haglin2017" class="citation">
-            <span class="reference-number">6.</span>
-            Haglin, J. (2017). The effectiveness of a brief online intervention to correct misperceptions about the flu vaccine. <em>Vaccine</em>, 35(29), 3649–3654.
-            <a class="back-link" href="#overview" aria-label="Back to section Project Overview & Motivations">↩</a>
-          </li>
-          <li id="ref-dimock1986" class="citation">
-            <span class="reference-number">7.</span>
-            Dimock, M. (1986). The myth of the backfire effect: When correction increases belief in the misinformation. <em>Communication Research</em>, 13(1), 41–58.
-            <a class="back-link" href="#overview" aria-label="Back to section Project Overview & Motivations">↩</a>
-          </li>
-          <li id="ref-sagiv2010" class="citation">
-            <span class="reference-number">8.</span>
-            Sagiv, L., & Schwartz, S. H. (2010). Value priorities and readiness for outgroup contact. <em>Journal of Personality and Social Psychology</em>, 99(3), 437–448.
-            <a class="back-link" href="#overview" aria-label="Back to section Project Overview & Motivations">↩</a>
-          </li>
-          <li id="ref-moreau2005" class="citation">
-            <span class="reference-number">9.</span>
-            Moreau, C., & Mageau, G. A. (2005). The effects of a brief intervention on the correction of misperceptions about the flu vaccine. <em>Vaccine</em>, 23(27), 3530–3536.
-            <a class="back-link" href="#overview" aria-label="Back to section Project Overview & Motivations">↩</a>
-          </li>
-          <li id="ref-kern2006" class="citation">
-            <span class="reference-number">10.</span>
-            Kern, M. L., & Friedman, H. S. (2006). Do people know how to be happy? A self-report and informant study of the personality, well-being, and social relationships of people with high and low subjective well-being. <em>Journal of Happiness Studies</em>, 7(3), 335–353.
-            <a class="back-link" href="#overview" aria-label="Back to section Project Overview & Motivations">↩</a>
-          </li>
-          <li id="ref-stokes2006" class="citation">
-            <span class="reference-number">11.</span>
-            Stokes, A. (2006). The role of personality in the prediction of academic performance. <em>Personality and Individual Differences</em>, 41(3), 439–449.
-            <a class="back-link" href="#overview" aria-label="Back to section Project Overview & Motivations">↩</a>
-          </li>
+      
+         <li id="dataFeminismCitation" class="citation">
+          <span class="reference-number">1.</span>
+          Klein, L., & D’Ignazio, C. (2024). <em>Data Feminism for AI</em>. In *The 2024 ACM Conference on Fairness, Accountability, and Transparency (FAccT ’24)*, June 03–06, 2024, Rio de Janeiro, Brazil. ACM. DOI: <a href="https://doi.org/10.1145/3630106.3658543" target="_blank" rel="noopener noreferrer">10.1145/3630106.3658543</a>. Available: <a href="https://facctconference.org/static/papers24/facct24-7.pdf" target="_blank" rel="noopener noreferrer">https://facctconference.org/static/papers24/facct24-7.pdf</a>.
+          <a class="back-link" href="#evidence" aria-label="Back to section">↩</a>
+        </li>
+
+
+
+       
         </ol>
       </div>
     </section>
